<resources>
    <string name="app_name">TastyVN</string>

    <string name="email">Email</string>
    <string name="username">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="my_cart">My Cart</string>
    <string name="order_details">Order Details</string>
    <string name="payment_method">Payment method</string>
    <string name="todo">To do</string>
    <string name="content">The only Indian restaurant in Indonesia that serves high quality dishes with high flavors. Made with real spices, and made by superior chefs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="voucher_1">35k off orders from 90k | Enter code MOMOT6 | Applicable for payments from MOMO until the end of June 25, 2021</string>
    <string name="rating_des">Reviews are collected from customers who have ordered each item at the store. You can refer to choose the right restaurant.
        Do not forget to leave a review after each order so that the store can improve its service, as well as light the way for many other mouths to eat!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_des">Sign in to your account?</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="find_des">Find restaurants, dishes</string>
    <string name="search">Search</string>
    <string name="recent_search">Recent searches</string>
    <string name="delivery_to">Delivery to</string>
    <string name="add_detail_address">Add building, floor, room number</string>
    <string name="change">Change</string>
    <string name="your_order">Your order</string>
    <string name="order_more">Please order more!</string>
    <string name="chat_with_res">Do you have a message for the restaurant?</string>
    <string name="provisional">Provisional</string>
    <string name="cash">Cash</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="eating_today">What are you eating today?</string>
    <string name="food_today">Tasty food today</string>
    <string name="see_more">See more</string>
    <string name="hot_voucher">Hot Voucher</string>
    <string name="loading">Loading...</string>
    <string name="cart">Cart</string>
    <string name="delivery_cost">Delivery cost: 0.5km</string>
    <string name="add_promo">ADD A PROMO</string>
    <string name="my_order">My order</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="new_pass">New password</string>
    <string name="exit">Exit</string>
    <string name="history_order">History order</string>
    <string name="reorder">Re-order</string>
    <string name="store_reviews">Store Reviews</string>
    <string name="eat_des">WHAT TO EAT  ALL DELICIOUS DISHES</string>
    <string name="top_food">Top rated dishes of the day</string>
    <string name="promo">PROMO</string>
    <string name="partner_of">PARTNER OF TASTY ANH</string>
    <string name="see_review">See reviews</string>
    <string name="about">About</string>
    <string name="mess_for_store">Message for the store</string>
    <string name="content_food">Tasty food</string>


</resources>