<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ftech.dev.android_my_food.UserInforViewModel"/>
        <variable
            name="userInforViewModel"
            type="UserInforViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray">

        <RelativeLayout
            android:id="@+id/rlTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ripple_click_square"
                android:padding="22dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_left_arrow" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_below="@id/ivBack"
                android:fontFamily="@font/cera_pro_bold"
                android:gravity="center_vertical"
                android:paddingStart="22dp"
                android:paddingEnd="14dp"
                android:text="@{userInforViewModel.userNameLivaData}"
                tools:text="Shambhavi Mishra"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:drawableEndCompat="@drawable/ic_white_right_arrow" />

        </RelativeLayout>

        <!--            <com.makeramen.roundedimageview.RoundedImageView-->
        <!--                android:id="@+id/imv_avatar"-->
        <!--                android:layout_width="160dp"-->
        <!--                android:layout_height="160dp"-->
        <!--                android:layout_marginTop="100dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:scaleType="centerCrop"-->
        <!--                android:src="@drawable/thuypi"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:riv_corner_radius="80dp" />-->


        <TextView
            android:id="@+id/tvMyOrder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/white_fill_stroke"
            android:drawableEnd="@drawable/ic_gray_right_arrow"
            android:fontFamily="@font/cera_pro_medim"
            android:gravity="center_vertical"
            android:paddingStart="22dp"
            android:paddingEnd="14dp"
            android:text="@string/my_order"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rlTopBar" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/white_fill_stroke"
            android:drawableEnd="@drawable/ic_gray_right_arrow"
            android:fontFamily="@font/cera_pro_medim"
            android:gravity="center_vertical"
            android:paddingStart="22dp"
            android:paddingEnd="14dp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvMyOrder" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/white_fill_stroke"
            android:drawableEnd="@drawable/ic_gray_right_arrow"
            android:fontFamily="@font/cera_pro_medim"
            android:gravity="center_vertical"
            android:paddingStart="22dp"
            android:paddingEnd="14dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvSetting" />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/white_fill_stroke"
            android:drawableEnd="@drawable/ic_gray_right_arrow"
            android:fontFamily="@font/cera_pro_medim"
            android:gravity="center_vertical"
            android:paddingStart="22dp"
            android:paddingEnd="14dp"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>