<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.allfood.AllFoodFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ripple_click_square"
            android:padding="22dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_black_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/cera_pro_medim"
            android:gravity="center"
            android:text="@string/food_today"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack">

            <RelativeLayout
                android:id="@+id/rlImageForVoucher"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/gradient_blue_fill">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivVoucher"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_balloon_dog" />

                <TextView
                    android:id="@+id/tvForImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="140dp"
                    android:fontFamily="@font/staatliches_regular"
                    android:lines="3"
                    android:maxLines="3"
                    android:text="@string/eat_des"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvLine"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@id/rlImageForVoucher"
                android:layout_marginHorizontal="180dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/border_2_gray_fill" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLine"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/top_food"
                android:textColor="@color/gray"
                android:textSize="14sp"
                tools:fontFamily="@font/cera_pro_light" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvDescription"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </RelativeLayout>
        <FrameLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transition_black"
            android:visibility="visible"
            tools:ignore="MissingConstraints,NotSibling">

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/border_6_white_fill"
                android:gravity="center"
                android:paddingTop="45dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>