<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="amount"
            type="Integer" />

        <variable
            name="total"
            type="Integer" />

        <variable
            name="food"
            type="com.ftech.dev.android_my_food.data.model.Food" />

        <variable
            name="viewModel"
            type="com.ftech.dev.android_my_food.shareviewmodel.FoodViewModel" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-36dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/rivFood"
                    riv_imageFood="@{viewModel.liveFood}"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:orientation="horizontal"
                    android:scaleType="centerCrop"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ripple_click_square_circle"
                        android:padding="23dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_left_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_gray"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingBottom="10dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/llRate">

                <RelativeLayout
                    android:id="@+id/rlInformation"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/white_fill_stroke"
                    android:paddingTop="10dp"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ripple_click_square"
                        android:fontFamily="@font/cera_pro_bold"
                        android:text="@{food.name}"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        tools:text="Indian Mastery Resto" />

                    <EditText
                        android:id="@+id/tvMess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvName"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/ripple_click_square"
                        android:fontFamily="@font/cera_pro_medim"
                        android:text="@string/mess_for_store"
                        android:textColor="@color/light_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/cera_pro_medim"
                        android:text="@{food.price +`đ`}"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="15000" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/cera_pro_medim"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="36dp"
                        android:fontFamily="@font/roboto_light"
                        android:lineHeight="20dp"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/content_food"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/white_fill_stroke"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="25dp"
            app:layout_anchor="@id/nestedScrollView"
            app:layout_anchorGravity="bottom">


            <ImageView
                android:id="@+id/imv_zoom_out"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@{viewModel.amount > 1 ? @drawable/border_7_light_gray_2_fill : @drawable/border_7_light_gray_0_fill}"
                android:padding="8dp"
                android:src="@{viewModel.amount > 1 ? @drawable/ic_minus : @drawable/ic_black_minus}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/cera_pro_medim"
                android:gravity="center"
                android:text="@{viewModel.amount+``}"
                android:textColor="@color/gray"
                android:textSize="16sp"
                tools:text="1" />

            <ImageView
                android:id="@+id/imv_zoom_in"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/border_7_light_gray_2_fill"
                android:padding="8dp"
                android:src="@drawable/ic_plus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCheckout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@drawable/border_5_light_blue_fill"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/cera_pro_medim"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@{`Thêm vào giỏ (`+ viewModel.total+`)`}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Checkout (42.000)" />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>